[metadata]
name = releasetools
version = attr: releasetools.__version__
description = Tools to help creating releases
long_description = file: README.md
long_description_content_type = text/markdown
author = Aurélien Gâteau
author_email = mail@agateau.com
license = Apache 2.0
platforms = any
url = https://github.com/agateau/releasetools
keywords = release, git
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Topic :: Software Development :: Build Tools

[options]
zip_safe = False
packages = find:

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
    rlt-version = releasetools.rlt_version:main
    rlt-changelog = releasetools.rlt_changelog:main
    rlt-updateworkbranch = releasetools.rlt_updateworkbranch:main
    rlt-tag = releasetools.rlt_tag:main
